kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speranskiy-backend-service
spec:
  selector:
    app: speranskiy-backend
  ports:
    - name: port1
      protocol: TCP
      port: 7001
      targetPort: 7001
    - name: port2
      protocol: TCP
      port: 7002
      targetPort: 7002
  type: LoadBalancer
