kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speranskiy-backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: meetme-app.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speranskiy-backend-service
                port:
                  number: 7001
    - host: khasbulat.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speranskiy-backend-service
                port:
                  number: 7001
  tls:
    - hosts:
        - meetme-app.ru
      secretName: meetme-app-tls-prod
    - hosts:
        - khasbulat.ru
      secretName: khasbulat-tls-prod
